--- a/user/blog-detail.html
+++ b/user/blog-detail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,9 @@
 </head>
 
 <body>
+    <!-- Reading Progress Bar -->
+    <div id="scroll-progress"></div>
+
     <!-- Header -->
     <div id="header-placeholder"></div>
 
@@ -58,4 +62,5 @@
     <script src="/assets/scripts/header.js"></script>
     <script src="/assets/scripts/comments.js"></script>
 </body>
+
 </html>
