--- a/user/index.html
+++ b/user/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,11 @@
     <link rel="stylesheet" href="/styles/footer.css">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
+
 <body>
+
+    <!-- Reading Progress Bar -->
+    <div id="scroll-progress"></div>
 
     <!-- Header -->
     <div id="header-placeholder"></div>
@@ -48,6 +53,7 @@
 
     <main>
         <h2 class="blog-header">SON YAZILANLAR</h2>
+
         <div id="posts-container">
             <!-- Blog yazıları buraya eklenecek -->
         </div>
@@ -77,4 +83,5 @@
     <script src="/assets/scripts/main.js"></script>
 
 </body>
+
 </html>
