--- a/user/blog-detail.html
+++ b/user/blog-detail.html
@@ -21,9 +21,9 @@
     <main>
         <div id="blog-detail-container">
             <h1 id="blog-title"></h1>
+            <small id="blog-meta" style="display: block; margin-bottom: 15px; color: #666;"></small>
             <img id="blog-image" src="" alt="Blog Resmi">
             <p id="blog-content"></p>
-            <small id="blog-meta"></small>
         </div>
 
         <section id="comments-section">
