--- a/user/blog-detail.html
+++ b/user/blog-detail.html
@@ -22,8 +22,14 @@
         <div id="blog-detail-container">
             <h1 id="blog-title"></h1>
             <small id="blog-meta" style="display: block; margin-bottom: 15px; color: #666;"></small>
+
             <img id="blog-image" src="" alt="Blog Resmi">
             <p id="blog-content"></p>
+
+            <!-- Social Share Buttons -->
+            <div id="share-buttons" class="share-buttons">
+                <!-- Buttons will be injected by JS -->
+            </div>
         </div>
 
         <section id="comments-section">
