change about page

--- a/user/about.html
+++ b/user/about.html
@@ -25,19 +25,35 @@
             <div class="container">
                 <h2>Biz Kimiz?</h2>
                 <p>
-                    Kişisel Blog, güncel içerikler ve ilham verici yazılar sunan bir platformdur. 
-                    Amacımız, bilgi paylaşımı ile herkesin daha fazla öğrenmesine katkı sağlamaktır.
+                    Merhaba, ben Hüseyin. Yazılım mühendisliği son sınıf öğrencisiyim ve teknolojiye özellikle siber güvenlik alanına büyük ilgi duyuyorum. 
+                    İstanbul'da yaşıyorum, üniversite nedeniyle Aksaray’dayım. Bu blogu; öğrendiklerimi paylaşmak, yeni şeyler keşfetmek ve başkalarına da fayda sağlamak için oluşturdum.
                 </p>
 
-                <h2>Ne Yapıyoruz?</h2>
+                <h2>Ne Paylaşıyorum?</h2>
                 <p>
-                    Blogumuzda teknoloji, seyahat, sanat, kültür ve daha birçok konuda 
-                    özgün ve ilginç içerikler paylaşıyoruz. 
+                    Bu blogda başta yazılım ve siber güvenlik olmak üzere;
+                </p>
+                <ul style="text-align: left; max-width: 600px; margin: 10px auto; list-style-position: inside;">
+                    <li>Erasmus deneyimi ve yurt dışı fırsatları</li>
+                    <li>Work and Travel süreci</li>
+                    <li>Teknoloji dünyasındaki güncel gelişmeler</li>
+                    <li>Kendi projelerim ve öğrendiklerim</li>
+                    <li>Seyahat ve kişisel deneyimler</li>
+                </ul>
+                <p>
+                    gibi birçok konuda içerik üretiyorum.
+                </p>
+                <p>
+                    Amacım; hem teknik anlamda kendimi geliştirmek hem de benim geçtiğim yollardan geçecek kişilere yol gösterebilmek. 
+                    Özellikle siber güvenlik alanında ilerlemeyi hedefliyorum ve bu süreçte edindiğim bilgileri burada düzenli olarak paylaşacağım.
                 </p>
 
                 <h2>İletişim</h2>
                 <p>
-                    Bizimle iletişime geçmek için <a href="#">buraya</a> tıklayın.
+                    Benimle iletişime geçmek, öneri yapmak veya iş birliği için aşağıdaki iletişim bölümünden bana ulaşabilirsin.
+                </p>
+                <p>
+                    <a href="/user/contact.html" style="color: #2563eb; font-weight: bold;">İletişim Sayfasına Git</a>
                 </p>
             </div>
         </section>
