activete contact side

--- a/user/contact.html
+++ b/user/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/styles/footer.css">
     <link rel="stylesheet" href="/styles/contact.css">
 </head>
+
 <body>
     <!-- Header -->
     <div id="header-placeholder"></div>
@@ -15,7 +17,7 @@
     <!-- Contact Form -->
     <main>
         <h2>İletişime Geçin</h2>
-        <form action="https://formspree.io/f/yemektenevar68@gmail.com" method="POST">
+        <form id="contactForm">
             <div>
                 <label for="name">Adınız</label>
                 <input type="text" id="name" name="name" required>
@@ -52,5 +54,7 @@
 
     <!-- JS -->
     <script src="/assets/scripts/header.js"></script>
+    <script src="/assets/scripts/contact.js"></script>
 </body>
+
 </html>
