--- a/admin/edit-post.html
+++ b/admin/edit-post.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="../styles/admin.css" />
   <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>
 </head>
+
 <body>
   <div class="admin-container">
     <aside class="sidebar">
@@ -16,8 +18,9 @@
         <li><a href="manage-posts.html">📝 Blogları Yönet</a></li>
         <li><a href="new-post.html">➕ Yeni Blog Ekle</a></li>
         <li><a href="categories.html">📂 Kategoriler</a></li>
-        <li><a href="manage-comments.html">💬 Yorumlar</a></li>
-        <li><a href="#" id="logout">🚪 Çıkış Yap</a></li>
+        <li><a href="manage-comments.html"><i class="fas fa-comments"></i> Yorumları Yönet</a></li>
+        <li><a href="messages.html"><i class="fas fa-envelope"></i> Mesajlar</a></li>
+        <li><a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Çıkış Yap</a></li>
       </ul>
     </aside>
 
@@ -44,4 +47,5 @@
     CKEDITOR.replace('content');
   </script>
 </body>
+
 </html>
