--- a/admin/manage-comments.html
+++ b/admin/manage-comments.html
@@ -16,8 +16,9 @@
         <li><a href="manage-posts.html">📝 Blogları Yönet</a></li>
         <li><a href="new-post.html">➕ Yeni Blog Ekle</a></li>
         <li><a href="categories.html">📂 Kategoriler</a></li>
-        <li><a href="manage-comments.html" class="active">💬 Yorumlar</a></li>
-        <li><a href="#" id="logout">🚪 Çıkış Yap</a></li>
+        <li><a href="manage-comments.html" class="active"><i class="fas fa-comments"></i> Yorumları Yönet</a></li>
+        <li><a href="messages.html"><i class="fas fa-envelope"></i> Mesajlar</a></li>
+        <li><a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Çıkış Yap</a></li>
       </ul>
     </aside>
 
