--- a/admin/manage-posts.html
+++ b/admin/manage-posts.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blogları Yönet</title>
   <link rel="stylesheet" href="../styles/admin.css" />
 </head>
+
 <body>
   <div class="admin-container">
     <aside class="sidebar">
@@ -15,8 +17,9 @@
         <li><a href="manage-posts.html" class="active">📝 Blogları Yönet</a></li>
         <li><a href="new-post.html">➕ Yeni Blog Ekle</a></li>
         <li><a href="categories.html">📂 Kategoriler</a></li>
-        <li><a href="manage-comments.html">💬 Yorumlar</a></li>
-        <li><a href="#" id="logout">🚪 Çıkış Yap</a></li>
+        <li><a href="manage-comments.html"><i class="fas fa-comments"></i> Yorumları Yönet</a></li>
+        <li><a href="messages.html"><i class="fas fa-envelope"></i> Mesajlar</a></li>
+        <li><a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Çıkış Yap</a></li>
       </ul>
     </aside>
 
@@ -40,4 +43,5 @@
 
   <script src="../assets/scripts/manage-posts.js"></script>
 </body>
+
 </html>
