add logo and faicon and fixed header

--- a/user/about.html
+++ b/user/about.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkımızda</title>
+    <link rel="icon" type="image/png" href="/assets/images/logo.png">
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/footer.css">
     <link rel="stylesheet" href="/styles/about.css">
 </head>
+
 <body>
 
     <!-- Header -->
@@ -25,8 +28,10 @@
             <div class="container">
                 <h2>Biz Kimiz?</h2>
                 <p>
-                    Merhaba, ben Hüseyin. Yazılım mühendisliği son sınıf öğrencisiyim ve teknolojiye özellikle siber güvenlik alanına büyük ilgi duyuyorum. 
-                    İstanbul'da yaşıyorum, üniversite nedeniyle Aksaray’dayım. Bu blogu; öğrendiklerimi paylaşmak, yeni şeyler keşfetmek ve başkalarına da fayda sağlamak için oluşturdum.
+                    Merhaba, ben Hüseyin. Yazılım mühendisliği son sınıf öğrencisiyim ve teknolojiye özellikle siber
+                    güvenlik alanına büyük ilgi duyuyorum.
+                    İstanbul'da yaşıyorum, üniversite nedeniyle Aksaray’dayım. Bu blogu; öğrendiklerimi paylaşmak, yeni
+                    şeyler keşfetmek ve başkalarına da fayda sağlamak için oluşturdum.
                 </p>
 
                 <h2>Ne Paylaşıyorum?</h2>
@@ -44,13 +49,16 @@
                     gibi birçok konuda içerik üretiyorum.
                 </p>
                 <p>
-                    Amacım; hem teknik anlamda kendimi geliştirmek hem de benim geçtiğim yollardan geçecek kişilere yol gösterebilmek. 
-                    Özellikle siber güvenlik alanında ilerlemeyi hedefliyorum ve bu süreçte edindiğim bilgileri burada düzenli olarak paylaşacağım.
+                    Amacım; hem teknik anlamda kendimi geliştirmek hem de benim geçtiğim yollardan geçecek kişilere yol
+                    gösterebilmek.
+                    Özellikle siber güvenlik alanında ilerlemeyi hedefliyorum ve bu süreçte edindiğim bilgileri burada
+                    düzenli olarak paylaşacağım.
                 </p>
 
                 <h2>İletişim</h2>
                 <p>
-                    Benimle iletişime geçmek, öneri yapmak veya iş birliği için aşağıdaki iletişim bölümünden bana ulaşabilirsin.
+                    Benimle iletişime geçmek, öneri yapmak veya iş birliği için aşağıdaki iletişim bölümünden bana
+                    ulaşabilirsin.
                 </p>
                 <p>
                     <a href="/user/contact.html" style="color: #2563eb; font-weight: bold;">İletişim Sayfasına Git</a>
@@ -72,9 +80,10 @@
             .then(response => response.text())
             .then(data => { document.getElementById("footer-placeholder").innerHTML = data; });
     </script>
-    
+
     <script src="../assets/scripts/header.js"></script>
 
 
 </body>
+
 </html>
