--- a/user/blog.html
+++ b/user/blog.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ana Sayfa</title>
+    <title>Bloglar</title>
+    <link rel="icon" type="image/png" href="/assets/images/logo.png">
     <!-- Stil dosyaları (mutlak yollarla) -->
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/footer.css">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
+
 <body>
 
     <!-- Header -->
@@ -45,4 +48,5 @@
     <script src="/assets/scripts/blog.js"></script>
 
 </body>
+
 </html>
