--- a/user/index.html
+++ b/user/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ana Sayfa</title>
+    <title>Ana Sayfa</title>
+    <link rel="icon" type="image/png" href="/assets/images/logo.png">
     <!-- CSS Dosyalarını Dahil Et -->
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/footer.css">
