Fix: Enhanced image deletion with HTML entity decoding and detailed logging

--- a/user/blog-detail.html
+++ b/user/blog-detail.html
@@ -25,7 +25,7 @@
             <small id="blog-meta" style="display: block; margin-bottom: 15px; color: #666;"></small>
 
             <img id="blog-image" src="" alt="Blog Resmi">
-            <p id="blog-content"></p>
+            <div id="blog-content"></div>
 
             <!-- Social Share Buttons -->
             <div id="share-buttons" class="share-buttons">
