--- a/admin/edit-post.html
+++ b/admin/edit-post.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blog Düzenle</title>
   <link rel="stylesheet" href="../styles/admin.css" />
-  <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </head>
 
 <body>
@@ -31,21 +32,20 @@
         <input type="text" id="title" required />
 
         <label for="content">İçerik:</label>
-        <textarea id="content" rows="6" required></textarea>
+        <!-- Quill Editor Container -->
+        <div id="editor-container"></div>
+        <input type="hidden" id="content"> <!-- Hidden input for logic -->
 
-        <label for="image">Yeni Resim Seç (Değiştirmek için):</label>
+        <label for="image" style="margin-top: 20px;">Yeni Resim Seç (Değiştirmek için):</label>
         <input type="file" id="image" accept="image/*" />
 
-        <button type="submit">Güncelle</button>
+        <button type="submit" style="margin-top: 20px;">Güncelle</button>
       </form>
       <p id="success-message" class="success"></p>
     </main>
   </div>
 
   <script src="../assets/scripts/edit-post.js"></script>
-  <script>
-    CKEDITOR.replace('content');
-  </script>
 </body>
 
 </html>
