--- a/admin/new-post.html
+++ b/admin/new-post.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yeni Blog Ekle</title>
   <link rel="stylesheet" href="../styles/admin.css" />
-  <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
       <ul>
         <li><a href="dashboard.html">🏠 Ana Sayfa</a></li>
         <li><a href="manage-posts.html">📝 Blogları Yönet</a></li>
-        <li><a href="new-post.html">➕ Yeni Blog Ekle</a></li>
+        <li><a href="new-post.html" class="active">➕ Yeni Blog Ekle</a></li> <!-- Added active class -->
         <li><a href="categories.html">📂 Kategoriler</a></li>
         <li><a href="manage-comments.html"><i class="fas fa-comments"></i> Yorumları Yönet</a></li>
         <li><a href="messages.html"><i class="fas fa-envelope"></i> Mesajlar</a></li>
@@ -31,15 +32,17 @@
         <input type="text" id="title" name="title" required />
 
         <label for="content">İçerik:</label>
-        <textarea id="content" name="content" rows="6" required></textarea>
+        <!-- Quill Editor Container -->
+        <div id="editor-container"></div>
+        <input type="hidden" name="content" id="hidden-content">
 
-        <label for="image">Resim Seç:</label>
+        <label for="image" style="margin-top: 20px;">Resim Seç:</label>
         <input type="file" id="image" name="image" accept="image/*" />
 
         <label for="category">Kategori:</label>
         <select id="category" name="category_id" required></select>
 
-        <button type="submit">Blogu Yayınla</button>
+        <button type="submit" style="margin-top: 20px;">Blogu Yayınla</button>
       </form>
 
       <p id="success-message" class="success"></p>
@@ -47,9 +50,6 @@
   </div>
 
   <script src="../assets/scripts/new-post.js"></script>
-  <script>
-    CKEDITOR.replace('content');
-  </script>
 </body>
 
 </html>
