--- a/user/about.html
+++ b/user/about.html
@@ -4,8 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hakkımızda</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Hakkımızda | Hüseyin Budak Blog</title>
+    <meta name="title" content="Hakkımızda - Hüseyin Budak">
+    <meta name="description"
+        content="Yazılım mühendisliği öğrencisi Hüseyin Budak hakkında. Siber güvenlik, teknoloji ve kişisel deneyimler üzerine blog yazıları.">
+    <meta name="keywords" content="hüseyin budak, yazılım mühendisliği, siber güvenlik, aksaray üniversitesi, erasmus">
+    <meta name="author" content="Hüseyin Budak">
+    <meta name="robots" content="index, follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://blog1-f397.onrender.com/user/about.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="profile">
+    <meta property="og:url" content="https://blog1-f397.onrender.com/user/about.html">
+    <meta property="og:title" content="Hakkımızda - Hüseyin Budak">
+    <meta property="og:description"
+        content="Yazılım mühendisliği öğrencisi Hüseyin Budak hakkında. Siber güvenlik, teknoloji ve kişisel deneyimler üzerine blog yazıları.">
+    <meta property="og:image" content="https://blog1-f397.onrender.com/assets/images/ben.jpg">
+    <meta property="og:locale" content="tr_TR">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="https://blog1-f397.onrender.com/user/about.html">
+    <meta name="twitter:title" content="Hakkımızda - Hüseyin Budak">
+    <meta name="twitter:description"
+        content="Yazılım mühendisliği öğrencisi Hüseyin Budak hakkında. Siber güvenlik, teknoloji ve kişisel deneyimler üzerine blog yazıları.">
+    <meta name="twitter:image" content="https://blog1-f397.onrender.com/assets/images/ben.jpg">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/images/logo.png">
+
+    <!-- Preconnect -->
+    <link rel="preconnect" href="https://res.cloudinary.com">
+
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/footer.css">
     <link rel="stylesheet" href="/styles/about.css">
@@ -82,7 +116,23 @@
     </script>
 
     <script src="../assets/scripts/header.js"></script>
+    <script src="/assets/scripts/analytics.js"></script>
 
+    <!-- Person Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Hüseyin Budak",
+        "url": "https://blog1-f397.onrender.com",
+        "description": "Yazılım mühendisliği öğrencisi, siber güvenlik meraklısı",
+        "jobTitle": "Yazılım Mühendisliği Öğrencisi",
+        "alumniOf": {
+            "@type": "EducationalOrganization",
+            "name": "Aksaray Üniversitesi"
+        }
+    }
+    </script>
 
 </body>
 
