--- a/user/contact.html
+++ b/user/contact.html
@@ -4,8 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+
+    <!-- Primary Meta Tags -->
+    <title>İletişim | Hüseyin Budak Blog</title>
+    <meta name="title" content="İletişim - Hüseyin Budak">
+    <meta name="description"
+        content="Hüseyin Budak ile iletişime geçin. Sorularınız, önerileriniz veya iş birliği teklifleriniz için bize ulaşın.">
+    <meta name="keywords" content="iletişim, hüseyin budak, blog iletişim, mesaj gönder">
+    <meta name="author" content="Hüseyin Budak">
+    <meta name="robots" content="index, follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://blog1-f397.onrender.com/user/contact.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://blog1-f397.onrender.com/user/contact.html">
+    <meta property="og:title" content="İletişim - Hüseyin Budak">
+    <meta property="og:description"
+        content="Hüseyin Budak ile iletişime geçin. Sorularınız, önerileriniz veya iş birliği teklifleriniz için bize ulaşın.">
+    <meta property="og:image" content="https://blog1-f397.onrender.com/assets/images/logo.png">
+    <meta property="og:locale" content="tr_TR">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="https://blog1-f397.onrender.com/user/contact.html">
+    <meta name="twitter:title" content="İletişim - Hüseyin Budak">
+    <meta name="twitter:description"
+        content="Hüseyin Budak ile iletişime geçin. Sorularınız, önerileriniz veya iş birliği teklifleriniz için bize ulaşın.">
+    <meta name="twitter:image" content="https://blog1-f397.onrender.com/assets/images/logo.png">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/images/logo.png">
+
+    <!-- Preconnect -->
+    <link rel="preconnect" href="https://res.cloudinary.com">
+
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/footer.css">
     <link rel="stylesheet" href="/styles/contact.css">
@@ -56,6 +90,18 @@
     <!-- JS -->
     <script src="/assets/scripts/header.js"></script>
     <script src="/assets/scripts/contact.js"></script>
+    <script src="/assets/scripts/analytics.js"></script>
+
+    <!-- ContactPage Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "ContactPage",
+        "name": "İletişim",
+        "description": "Hüseyin Budak ile iletişime geçin",
+        "url": "https://blog1-f397.onrender.com/user/contact.html"
+    }
+    </script>
 </body>
 
 </html>
