--- a/user/index.html
+++ b/user/index.html
@@ -4,8 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ana Sayfa</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Ana Sayfa | Hüseyin Budak Blog</title>
+    <meta name="title" content="Hüseyin Budak Blog - Yazılım, Siber Güvenlik ve Teknoloji">
+    <meta name="description"
+        content="Yazılım mühendisliği, siber güvenlik, teknoloji, Erasmus deneyimleri ve kişisel gelişim hakkında blog yazıları. Hüseyin Budak'ın kişisel blogu.">
+    <meta name="keywords"
+        content="yazılım, siber güvenlik, teknoloji, blog, erasmus, work and travel, programlama, web geliştirme">
+    <meta name="author" content="Hüseyin Budak">
+    <meta name="robots" content="index, follow">
+
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="x7vUOBor2w87iJF3lHhg314Dwq0NwjcU9XMcZYi3gTg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://blog1-f397.onrender.com/user/index.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://blog1-f397.onrender.com/user/index.html">
+    <meta property="og:title" content="Hüseyin Budak Blog - Yazılım, Siber Güvenlik ve Teknoloji">
+    <meta property="og:description"
+        content="Yazılım mühendisliği, siber güvenlik, teknoloji, Erasmus deneyimleri ve kişisel gelişim hakkında blog yazıları.">
+    <meta property="og:image" content="https://blog1-f397.onrender.com/assets/images/logo.png">
+    <meta property="og:locale" content="tr_TR">
+    <meta property="og:site_name" content="Hüseyin Budak Blog">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://blog1-f397.onrender.com/user/index.html">
+    <meta name="twitter:title" content="Hüseyin Budak Blog - Yazılım, Siber Güvenlik ve Teknoloji">
+    <meta name="twitter:description"
+        content="Yazılım mühendisliği, siber güvenlik, teknoloji, Erasmus deneyimleri ve kişisel gelişim hakkında blog yazıları.">
+    <meta name="twitter:image" content="https://blog1-f397.onrender.com/assets/images/logo.png">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/images/logo.png">
+
+    <!-- Preconnect for Performance -->
+    <link rel="preconnect" href="https://res.cloudinary.com">
+    <link rel="dns-prefetch" href="https://res.cloudinary.com">
+
     <!-- CSS Dosyalarını Dahil Et -->
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/footer.css">
@@ -82,6 +122,38 @@
     <!-- Script Dosyaları -->
     <script src="/assets/scripts/header.js"></script>
     <script src="/assets/scripts/main.js"></script>
+    <script src="/assets/scripts/analytics.js"></script>
+
+    <!-- Structured Data - Organization -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Hüseyin Budak Blog",
+        "url": "https://blog1-f397.onrender.com",
+        "logo": "https://blog1-f397.onrender.com/assets/images/logo.png",
+        "description": "Yazılım, siber güvenlik, teknoloji ve kişisel deneyimler hakkında blog yazıları",
+        "founder": {
+            "@type": "Person",
+            "name": "Hüseyin Budak"
+        }
+    }
+    </script>
+
+    <!-- Structured Data - WebSite -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Hüseyin Budak Blog",
+        "url": "https://blog1-f397.onrender.com",
+        "description": "Yazılım, siber güvenlik ve teknoloji blogu",
+        "publisher": {
+            "@type": "Organization",
+            "name": "Hüseyin Budak Blog"
+        }
+    }
+    </script>
 
 </body>
 
