--- a/user/blog.html
+++ b/user/blog.html
@@ -4,8 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bloglar</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Blog Yazıları | Hüseyin Budak Blog</title>
+    <meta name="title" content="Blog Yazıları - Hüseyin Budak">
+    <meta name="description"
+        content="Yazılım, siber güvenlik, teknoloji, Erasmus ve kişisel gelişim hakkında tüm blog yazılarını keşfedin.">
+    <meta name="keywords" content="blog yazıları, yazılım, siber güvenlik, teknoloji, erasmus">
+    <meta name="author" content="Hüseyin Budak">
+    <meta name="robots" content="index, follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://blog1-f397.onrender.com/user/blog.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://blog1-f397.onrender.com/user/blog.html">
+    <meta property="og:title" content="Blog Yazıları - Hüseyin Budak">
+    <meta property="og:description"
+        content="Yazılım, siber güvenlik, teknoloji, Erasmus ve kişisel gelişim hakkında tüm blog yazılarını keşfedin.">
+    <meta property="og:image" content="https://blog1-f397.onrender.com/assets/images/logo.png">
+    <meta property="og:locale" content="tr_TR">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://blog1-f397.onrender.com/user/blog.html">
+    <meta name="twitter:title" content="Blog Yazıları - Hüseyin Budak">
+    <meta name="twitter:description"
+        content="Yazılım, siber güvenlik, teknoloji, Erasmus ve kişisel gelişim hakkında tüm blog yazılarını keşfedin.">
+    <meta name="twitter:image" content="https://blog1-f397.onrender.com/assets/images/logo.png">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/images/logo.png">
+
+    <!-- Preconnect -->
+    <link rel="preconnect" href="https://res.cloudinary.com">
+
     <!-- Stil dosyaları (mutlak yollarla) -->
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/footer.css">
@@ -46,6 +80,29 @@
     <script src="/assets/scripts/header.js"></script>
     <script src="/assets/scripts/main.js"></script>
     <script src="/assets/scripts/blog.js"></script>
+    <script src="/assets/scripts/analytics.js"></script>
+
+    <!-- Breadcrumb Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Ana Sayfa",
+                "item": "https://blog1-f397.onrender.com/user/index.html"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Blog",
+                "item": "https://blog1-f397.onrender.com/user/blog.html"
+            }
+        ]
+    }
+    </script>
 
 </body>
 
