change slider text

--- a/user/index.html
+++ b/user/index.html
@@ -66,17 +66,17 @@
             <!-- Slide 1 -->
             <div class="slide slide-1">
                 <div class="slide-content">
-                    <h1>Hoş Geldin!</h1>
-                    <p>Kişisel bloguma göz at, yeni fikirler keşfet.</p>
-                    <a href="#posts-container" class="btn-hero">Keşfet</a>
+                    <h1>Yazılım ve Teknoloji Dünyasına Hoş Geldin!</h1>
+                    <p>Siber güvenlik, yazılım geliştirme ve teknoloji trendleri hakkında derinlemesine yazılar.</p>
+                    <a href="#posts-container" class="btn-hero">Yazılara Göz At</a>
                 </div>
             </div>
             <!-- Slide 2 -->
             <div class="slide slide-2">
                 <div class="slide-content">
-                    <h1>Farklı Yazılar</h1>
-                    <p>Fotoğraflar, hikayeler ve çok daha fazlası.</p>
-                    <a href="#posts-container" class="btn-hero">Okumaya Başla</a>
+                    <h1>Deneyimlerimi Paylaşıyorum</h1>
+                    <p>Erasmus maceraları, work and travel anıları ve kişisel gelişim hikayeleri.</p>
+                    <a href="#posts-container" class="btn-hero">Keşfetmeye Başla</a>
                 </div>
             </div>
             <!-- Slide 3 -->
